styles.css
/* ... */
.download__body__text {
  color: #676767;
  font-family: Poppins;
  font-size: 1.13rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.8rem; /* 166.667% */
}
.download__callTo__action {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 3rem;
}
.download__callTo__action button {
  border-radius: 12px;
  border: 1.5px solid #eedcdc;
  background: #fef5f5;
  padding: 0.6rem 2rem;
  display: flex;
  gap: 2rem;
}
.footer {
  max-width: 80%;
  margin: 0 auto;
  padding-top: 6.25rem;
  padding-bottom: 3.25rem;
}
.footer__links {
  display: flex;
  row-gap: 10rem;
  justify-content: center;
  color: #676767;
  font-family: Poppins;
  padding-bottom: 3rem;
}

.footer__links ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-left: 0;
}
.footer__links ul li {
  list-style: none;
}
.footer__links ul li a {
  text-decoration: none;
  color: #676767;
  font-family: Poppins;
  font-size: 0.9rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.8rem; /* 166.667% */
}
.footer__form {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
  margin-top: 2rem;
}

.footer__form input {
  padding: 0.5rem 1rem;
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
  outline: none;
  border-right: none;
  border: 1px solid #ccc;
}
.footer__form button {
  padding: 0.5rem 1rem;
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
  outline: none;
  border-left: none;
  border: 1px solid #ccc;
  background-color: #fef5f5;
  cursor: pointer;
}
hr {
  background: #ececec;
  opacity: 0.5;
}
.copyright {
  color: #676767;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 43rem;
  padding-top: 2rem;
}
.terms__privacy {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}
.terms__privacy a {
  text-decoration: none;
  color: #676767;
}

@media (max-width: 1536px) {
  .nav__wrapper {
    gap: 5rem;
  }
  .nav-links ul {
    gap: 0.7rem;
  }
  .hero-section {
    gap: 0.4rem;
  }
  .hero-large-text {
    font-size: 3rem;
    line-height: 3.5rem;
  }
  .light-text {
    font-size: 0.82rem;
    line-height: 1.1rem;
  }
  .hero-image {
    width: 42rem;
    height: 32rem;
  }
  .call-to-action {
    gap: 3rem;
  }
  .order-button {
    padding: 0.6rem 2rem;
    font-size: 0.7rem;
    white-space: nowrap;
  }
  .play {
    padding-right: 8rem;
  }

  .play h2 {
    font-size: 0.8rem;
    line-height: 1rem;
    white-space: nowrap;
  }
  .features__wrapper {
    gap: 6rem;
  }
  .why__choose {
    gap: 6rem;
  }
  .choose__image {
    max-width: 30rem;
    max-height: 20rem;
  }
  .why__choose__text__title {
    font-size: 1.4rem;
    line-height: 2.5rem;
  }
  .why__choose__text__subtitle {
    font-size: 2rem;
    line-height: 2.5rem;
  }
  .desc__text__wrapper {
    font-size: 0.9rem;
  }
  .cheece__image {
    max-width: 32.7rem;
    max-height: 31.4rem;
  }
  .intro__title {
    font-size: 1.7rem;
    line-height: 2.5rem;
  }
  .intro__feature {
    font-size: 0.9rem;
    line-height: 1.5rem;
  }
  .delivery__body__text {
    font-size: 0.9rem;
    line-height: 1.5rem;
  }
  .bike__delivery {
    top: 3.5rem;
    left: -4rem;
  }
  .CTA__wrapper {
    gap: 15rem;
  }
  .download__body__text {
    font-size: 1rem;
    line-height: 1.5rem;
  }
  .download__title {
    font-size: 1.9rem;
    line-height: 2.5rem;
  }
  .footer__links {
    gap: 5rem;
  }
  .copyright {
    gap: 26rem;
  }
  .terms__privacy {
    gap: 3rem;
  }
  .terms__privacy a {
    white-space: nowrap;
  }
}

@media (max-width: 1280px) {
  .nav__wrapper {
    gap: 3rem;
  }
  .nav-links ul {
    gap: 0.5rem;
  }
}

@media (max-width: 1024px) {
  .nav__wrapper {
    gap: 2rem;
  }
  .search-cart {
    position: absolute;
    top: 9rem;
    left: 53%;
  }
  .hero-section {
    gap: -2rem;
  }
  .hero-large-text {
    font-size: 2.4rem;
    line-height: 2.8rem;
    max-width: 100%;
  }
  .intro-feature {
    position: relative;
    top: -1.5rem;
  }
  .right-hero-section {
    max-width: 50%;
  }
  .hero-image {
    width: 24rem;
    height: 20rem;
  }
  .light-text {
    font-size: 0.8rem;
    line-height: 1.1rem;
  }
  .red-text {
    white-space: nowrap;
  }
  .call-to-action {
    gap: 2rem;
    margin-top: 1.5rem;
  }
  .features__wrapper {
    gap: 2rem;
  }
  .feature__item {
    padding-top: 2rem;
    padding-bottom: 2rem;
    max-height: 14rem;
  }
  .why__choose {
    gap: 2rem;
  }
  .choose__image {
    max-width: 23rem;
    max-height: 13rem;
  }
  .why__choose__text__title {
    font-size: 1rem;
    line-height: 0.5rem;
  }
  .why__choose__text__subtitle {
    font-size: 1.3rem;
    line-height: 1.3rem;
  }
  .desc__text__wrapper {
    font-size: 0.7rem;
  }
  .order-button-choice {
    padding: 0.6rem 2rem;
    font-size: 0.7rem;
    white-space: nowrap;
    margin-top: 1rem;
  }
  .delivery__wrapper {
    gap: 5rem;
  }
  .cheece__image {
    max-width: 22.7rem;
    max-height: 21.4rem;
  }
  .intro__title {
    font-size: 1.1rem;
    line-height: 2rem;
  }
  .intro__feature {
    font-size: 0.6rem;
    line-height: 1rem;
  }
  .delivery__body__text {
    font-size: 0.7rem;
    line-height: 1rem;
  }
  .bike__delivery img {
    max-width: 7.4rem;
    max-height: 10rem;
  }
  .delivery__callTo__action button {
    padding: 0.8rem 2rem;
    font-size: 0.7rem;
    white-space: nowrap;
    margin-top: 1rem;
  }
  .CTA__wrapper {
    gap: 6rem;
  }
  .download__body__text {
    font-size: 0.8rem;
    line-height: 1rem;
  }
  .download__title {
    font-size: 1.5rem;
    line-height: 2rem;
  }
  .download__intro {
    font-size: 0.9rem;
    line-height: 1rem;
  }
  .download__callTo__action {
    gap: 1rem;
  }
  .download__callTo__action button {
    padding: 0.4rem 1.5rem;
    font-size: 0.7rem;
    white-space: nowrap;
    margin-top: 0.1rem;
    gap: 1rem;
  }
  .footer__links {
    flex-wrap: wrap;
  }
  .copyright {
    gap: 8rem;
  }
}
/* ... */

